--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.navbar-collapse {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease; /* Added transition */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-open {
+  max-height: 500px;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.marquee-wrapper {
+  transition: margin-top 0.3s ease-in-out; /* Added transition */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.marquee-open {
+  margin-top: 400px; /* Adjust this value based on your requirements */
 }
