Implementing Landing Page at Home Component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,7 @@
 .marquee-open {
   margin-top: 400px; /* Adjust this value based on your requirements */
 }
+button:hover .text-violet-800,
+button:hover span {
+  color: white;
+}
